--- a/templates/page.html
+++ b/templates/page.html
@@ -1,59 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title class="config:app-title">App Title</title>
-        <meta class="config:app-meta"/>
+        <title data-template="config:app-title">App Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta data-template="config:app-meta"/>
         <link rel="shortcut icon" href="resources/images/favicon.ico"/>
-        <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="resources/css/bootstrap-responsive.min.css"/>
-        <link rel="stylesheet" type="text/css" href="resources/css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="$shared/resources/css/exist.css"/>
+        <link rel="stylesheet" type="text/css" href="resources/css/doc.css"/>
     </head>
-    <body id="body">
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                        <span class="icon-bar"/>
-                        <span class="icon-bar"/>
-                    </a>
-                    <a class="brand" href="#">eXist-db</a>
-                    <div class="nav-collapse collapse navbar-responsive-collapse">
-                        <ul class="nav">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <b class="caret"/>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">Action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Another action</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Something else here</a>
-                                    </li>
-                                    <li class="divider"/>
-                                    <li class="nav-header">Nav header</li>
-                                    <li>
-                                        <a href="#">Separated link</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">One more separated link</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="navbar-search pull-right" action="">
-                            <input type="text" class="search-query span2" placeholder="Search"/>
-                        </form>
-                    </div><!-- /.nav-collapse -->
+    <body id="grey-top">
+        <div class="grey-bot">
+            <div class="container-fluid" id="main-container">
+                <div class="row-fluid">
+                    <div class="span12" id="header">
+                        <a href="/" id="logo">eXistDB</a>
+                    </div>
                 </div>
-            </div><!-- /navbar-inner -->
+                <div class="row-fluid">
+                    <div class="navbar">
+                        <div class="navbar-inner">
+                            <div class="container">
+                                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                                    <span class="icon-bar"/>
+                                    <span class="icon-bar"/>
+                                    <span class="icon-bar"/>
+                                </a>
+                                <div class="nav-collapse collapse">
+                                    <ul class="nav">
+                                        <li class="dropdown" id="about">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
+                                            <ul class="dropdown-menu">
+                                                <li>
+                                                    <a href="index.html">Home</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="content" class="row-fluid"/>
+            </div>
         </div>
-        <div id="content" class="container-fluid"/>
+        <div id="footer">
+            <ul>
+                <li>
+                    <a href="http://exist-db.org">eXist-db.org</a>
+                </li>
+                <li>
+                    <a href="{doc}/documentation.xml">Documentation</a>
+                </li>
+                <li>
+                    <a href="{demo}/index.html">Demo</a>
+                </li>
+                <li>
+                    <a href="/status">Status</a>
+                </li>
+                <li>
+                    <a href="{doc}/legal.xml">Legal</a>
+                </li>
+            </ul>
+            <div id="copyright">
+                <p>Copyright GreatLinkUp LLC 2013</p>
+            </div>
+        </div>
         <script type="text/javascript" src="$shared/resources/scripts/jquery/jquery-1.7.1.min.js"/>
-        <script type="text/javascript" src="resources/js/bootstrap.min.js"/>
+        <script type="text/javascript" src="$shared/resources/scripts/bootstrap.min.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/ace/ace.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/ace/mode-javascript.js"/>
         <script type="text/javascript" src="$shared/resources/scripts/ace/mode-text.js"/>
